Quick lib introduction

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parser / serializer for the formats defined in the W3C TraceContext specification",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc --outDir dist -p .",
+    "build": "rm -rf dist && tsc --outDir dist -p . -d",
     "test": "jest --coverage --coverageDirectory coverage",
     "test:watch": "jest --coverage --coverageDirectory coverage --watch lib",
     "prepublish": "npm run build"
